--- a/src/component/About/index.scss
+++ b/src/component/About/index.scss
@@ -26,10 +26,10 @@
         border: 1px solid #ccc;
         background: rgba(255, 255, 255, 0.4);
         text-align: center;
-        font-size: 100px;
+        font-size: 120px;
         display: flex;
         justify-content: center;
-        align-content: center;
+        align-items: center;
         box-shadow: 0 0 20px 0px lightyellow;
     }
     .face1{
@@ -74,4 +74,14 @@
         transform: rotateX(90deg);
     }
     
+}
+
+
+@media (max-width: 960px){
+
+    .stage-cube-cont {
+        position: relative;
+        width: 100%;
+        height: 445px;
+    }
 }
