--- a/src/component/Contact/index.scss
+++ b/src/component/Contact/index.scss
@@ -113,3 +113,16 @@ span{
     animation-fill-mode: forwards;
 
 }
+
+@media screen and (max-width: 1200px) {
+    .map-wrap {
+      float: none;
+      margin: 0;
+      width: 100%;
+      height: 400px;
+    }
+  
+    .info-map {
+      display: none;
+    }
+  }
