--- a/src/component/Home/index.scss
+++ b/src/component/Home/index.scss
@@ -60,6 +60,10 @@
     margin: 3%;
 }
 
+
+.sample{
+  display: none;
+}
 // .image{
 //     width: 50%;
 //     height: 50%;
@@ -85,6 +89,9 @@
 }
 
 @media screen and (max-width: 1200px) {
+  .sample{
+    display: block;
+  }
     .tags,
     .home-page h1:before,
     .home-page h1:after {
